--- a/client/player/index.html
+++ b/client/player/index.html
@@ -17,4 +17,10 @@
   <div ng-show="state.pendingforquestion">
     yay
   </div>
+
+  <div ng-show="state.question">
+    vraag: {{question.question}}<br/>
+    <input type='text' ng-model="playersAnswer"></input><br/>
+    <input type='button' ng-click='playerAnswered(playersAnswer)'>Submit</input>
+  </div>
 </div>
