almost there. score wordt nog niet goed toegekend.. blijkbaar gaat ie elke keer terug naar zijn default waarde

--- a/client/board/index.html
+++ b/client/board/index.html
@@ -6,6 +6,7 @@
   <div ng-show="state.waitforteams">
     Round: <br/>
     Question nr: {{questionNr}}/12<br/>
+    Category: {{currentQuestion.category}}<br/>
     Current question: {{currentQuestion.question}}<br/>
     <table>
       <tr>
