--- a/client/player/index.html
+++ b/client/player/index.html
@@ -15,7 +15,8 @@
   </div>
 
   <div ng-show="state.pendingforquestion">
-    yay
+    It's gonna be Legen!! .. Wait for it.. Dary!<br/>
+    Legendary! 
   </div>
 
   <div ng-show="state.question">
