--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,12 @@
     <!-- Angular Material Javascript now available via Google CDN; version 0.11.2 used here -->
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script>
 
+   <link href="lib/bootstrap-3.3.6-dist/css/bootstrap.css" rel="stylesheet"/>
+   <link href="lib/bootstrap-3.3.6-dist/css/bootstrap-theme.css" rel="stylesheet"/>
+
+   <script src="lib/jquery-2.1.1.js"></script>
+   <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.js"></script>
+
     <!-- SPELLS -->
     <!-- load angular and angular route via CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
@@ -23,9 +29,6 @@
     <script src="board/index.js"></script>
 
     <div>
-      <div id="menu">
-        <a href="#">Home</a>
-      </div>
       <div id="main">
         <div ng-view></div>
       </div>
